Fix description align once more

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -172,5 +172,7 @@ input {
   width: 25%;
   text-align: justify;
   vertical-align: top;
+  padding-left: 10px;
+  padding-right: 10px;
 }
 
